--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,12 +3,11 @@ version: 0.2
 phases:
   install:
     commands:
-      - echo "Install phase started"
+      - pip install -r requirements.txt
   build:
     commands:
-      - echo "Build phase started"
-      - echo "Simulating build success"
-
+      - echo "Build completed successfully"
 artifacts:
   files:
-    - '**/*'
+    - app.py
+    - requirements.txt
