--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,11 @@ phases:
   install:
     commands:
       - pip install -r requirements.txt
+
   build:
     commands:
       - python app.py
+
+artifacts:
+  files:
+    - '**/*'
